# jbcom-oss-ecosystem

./: .gitignore  .yamllint.yaml  ACTION_PLAN.md  AGENTS.md  CONTRIBUTING.md  ECOSYSTEM.toml  FIXES_NEEDED.md  GAP_ANALYSIS.md  LICENSE  README.md  WORKFLOW_FIX.md  agentic.config.json  apply-fixes.sh  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  renovate.json  tox.ini
.cursor/: session-hold.md
.cursor/rules/: 00-session-start.mdc  00-start-here.mdc  01-branch-protection.mdc  05-ci-workflow.mdc  10-problem-solving.mdc  15-agent-discipline.mdc  99-cursor-rules-repo.mdc
.github/: CODEOWNERS  dependabot.yml
.github/codeql/: codeql-config.yml
.github/sync/: agentic-control.yml  directed-inputs-class.yml  extended-data-types.yml  lifecyclelogging.yml  mesh-toolkit.yml  python-terraform-bridge.yml  vault-secret-sync.yml  vendor-connectors.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  codeql.yml  crewai.yml  dependabot-automerge.yml  sync-mesh-animations.yml  testomat-sync.yml
.hypothesis/constants/: 0c701bce7a8fa2b0  15f2b36b87b76b62  2bac427b78a76057  384c049088d6b7c8  43a0358f0998c47a  47c8c25b14a4396b  521d3ff7be53baea  5b60961e22d92d6d  637533f979cb964d  6e12774db871dbc6  72d236531926e5ea  90e26e8c9026a808  956d6ad76b43843f  9c1f002f8ac085f5  a6bc27f04173cb3e  a8560ab35ba073b0  ae0bfd5aed428bf7  b457c85ecfaf733d  b629a7c3c12edde5  ba4012fec60e97ed  be028a8bd0322763  ca4acdd080ff1477  dc5a39de7e0c2c1f  e36ef7edc24e59bb  e5a3b4047ec73f90  e7adcc2fbf5ca40b  e83664376bc58c1e  f04f9f5879518dda  f3dca830e3250c2f  f5e812ce35c7225c  fad10626a57af0a6
.kiro/hooks/: asset-enrichment-advisor.kiro.hook  code-quality-analyzer.kiro.hook  docs-sync-hook.kiro.hook
.kiro/settings/: mcp.json
.kiro/specs/otterfall-complete/: design.md  requirements.md  tasks.md
.kiro/steering/: 00-kiro-local-yolo.md  00-session-start.md  00-start-here.md  01-branch-protection.md  01-quality-standards.md  02-mobile-first-design.md  05-ci-workflow.md  10-problem-solving.md  99-cursor-rules-repo.md  local development.md
.ruler/: AGENTS.md  go-style.md  python-style.md  ruler.toml  typescript-style.md
docs/: AGENT-RECOVERY-TOOLING.md  FLEET-MANAGEMENT-PROTOCOL.md  RELEASE-PROCESS.md  TOKEN-MANAGEMENT.md
internal/crewai/: crewbase.yaml  pyproject.toml
internal/crewai/src/crew_agents/: __init__.py  __main__.py  crew.py  main.py  run_flow.py
internal/crewai/src/crew_agents/base/: __init__.py
internal/crewai/src/crew_agents/config/: llm.py
internal/crewai/src/crew_agents/core/: __init__.py  discovery.py  loader.py  runner.py
internal/crewai/src/crew_agents/crews/: __init__.py
internal/crewai/src/crew_agents/crews/asset_pipeline/: asset_crew.py
internal/crewai/src/crew_agents/crews/creature_design/: creature_design_crew.py
internal/crewai/src/crew_agents/crews/ecs_implementation/: ecs_crew.py
internal/crewai/src/crew_agents/crews/game_builder/: game_builder_crew.py
internal/crewai/src/crew_agents/crews/gameplay_design/: gameplay_design_crew.py
internal/crewai/src/crew_agents/crews/qa_validation/: qa_crew.py
internal/crewai/src/crew_agents/crews/rendering/: rendering_crew.py
internal/crewai/src/crew_agents/crews/world_design/: world_design_crew.py
internal/crewai/src/crew_agents/crews/world_design/config/: tasks.yaml
internal/crewai/src/crew_agents/flows/: __init__.py  asset_generation_flow.py  asset_integration_flow.py  batch_generation_flow.py  game_design_flow.py  hitl_review_flow.py  implementation_flow.py  meshy_asset_flow.py  prototype_to_production_flow.py  tdd_prototype_flow.py
internal/crewai/src/crew_agents/tools/: __init__.py  file_tools.py
internal/crewai/tests/: __init__.py  conftest.py  test_discovery.py  test_file_tools.py  test_flows.py  test_loader.py
memory-bank/: activeContext.md  antigravity-conversation.md  final-summary.md  otterfall-complete-progress.md  otterfall-progress.md  progress.md  session-summary.md
