[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# UV Workspace - manages Python packages in packages/
# Note: cursor-fleet is a TypeScript package (has package.json, not pyproject.toml)
[tool.uv.workspace]
members = [
    "packages/extended-data-types",
    "packages/lifecyclelogging",
    "packages/directed-inputs-class",
    "packages/vendor-connectors",
    "packages/python-terraform-bridge",
    "packages/mesh-toolkit",
]

[tool.uv.sources]
extended-data-types = { workspace = true }
lifecyclelogging = { workspace = true }
directed-inputs-class = { workspace = true }
vendor-connectors = { workspace = true }
python-terraform-bridge = { workspace = true }
mesh-toolkit = { workspace = true }

[project]
name = "jbcom-control-center"
version = "0.0.0"
description = "Control center for jbcom Python ecosystem"
authors = [
    { name = "Jon Bogaty", email = "jon@jonbogaty.com" }
]
maintainers = [
    { name = "Jon Bogaty", email = "jon@jonbogaty.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Typing :: Typed",
]
keywords = [
    "python",
    "template",
    "library",
    "semver",
    "automation",
]
dependencies = [
    # Your dependencies here
]

[project.optional-dependencies]
tests = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
]
typing = [
    "mypy>=1.8.0",
    "pyright>=1.1.350",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0.0",
]
dev = [
    "jbcom-control-center[tests,typing,docs]",
    "pre-commit>=3.6.0",
    "ruff>=0.8.0",
    "python-semantic-release>=9.14.0",
    "nox>=2024.4.15",
]

[project.urls]
Homepage = "https://github.com/jbcom/python-library-template"
Repository = "https://github.com/jbcom/python-library-template"
Documentation = "https://github.com/jbcom/python-library-template/tree/main/docs"
Tracker = "https://github.com/jbcom/python-library-template/issues"
Changelog = "https://github.com/jbcom/python-library-template/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/example_package"]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific rules
    "D",      # pydocstyle
    "T201",   # print statements
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "S",      # flake8-bandit
]
ignore = [
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
# CI scripts can use print, skip docstrings, etc.
".github/scripts/*.py" = ["T201", "D103", "EM101", "PTH123", "EXE001", "S603", "S607"]
# Tests can use asserts, skip docstrings
"tests/*.py" = ["D103", "S101", "D100", "D104"]
# Nox files can skip docstrings
"noxfile.py" = ["D100", "D103"]
# Management tools can use print, skip docstrings
"tools/*.py" = ["T201", "D103", "S603", "S607"]
# directed-inputs-class: Decorator-based input handling
"packages/directed-inputs-class/src/**/*.py" = [
    "PLR0911", "PLR0912",  # Complex coercion function has many branches
]
"packages/directed-inputs-class/tests/*.py" = [
    "D103", "S101", "D100", "D104",  # Tests: skip docstrings, use asserts
    "PLR2004",  # Magic numbers OK in tests
    "SLF001",   # Private member access OK in tests
    "B011", "PT015", "PT017",  # Test assertion patterns OK
]
# vendor-connectors: Python 3.9 compat, minimal docstring requirements, relaxed security for connectors
"packages/vendor-connectors/**/*.py" = [
    "UP006", "UP007", "UP035", "UP045",  # Python 3.9 compat (Optional, Dict, List, etc.)
    "D",      # Skip docstring requirements during refactor
    "S",      # Skip security checks for credential handling patterns
    "B008",   # Function calls in defaults
    "C901",   # Complexity
]
# python-terraform-bridge: Python 3.10+, CLI needs print, subprocess for terraform
"packages/python-terraform-bridge/**/*.py" = [
    "D",      # Skip docstring requirements during development
    "T201",   # Print statements required for CLI output
    "EM101", "EM102",  # Exception message style - match terraform-modules patterns
]
"packages/python-terraform-bridge/tests/**/*.py" = [
    "D103", "S101", "D100", "D104",  # Tests: skip docstrings, use asserts
]
# mesh-toolkit: New package, relax rules during initial development
"packages/mesh-toolkit/**/*.py" = [
    "D",      # Skip docstring requirements during initial development
    "PTH",    # Allow os.* for now, migrate to pathlib later
    "RUF012", # ClassVar annotations for mutable class attributes
    "TC001",  # Runtime imports used in __init__ signatures
]
"packages/mesh-toolkit/tests/**/*.py" = [
    "D103", "S101", "D100", "D104",  # Tests: skip docstrings, use asserts
    "SIM117",  # Allow nested with statements in tests for clarity
]
"packages/mesh-toolkit/scripts/**/*.py" = [
    "T201",    # Print statements required for CLI output
    "D",       # Skip docstrings in scripts
    "SIM105",  # Allow try-except-pass for parsing
    "C401",    # Allow generator in set() for readability
    "S603", "S607",  # Allow subprocess calls
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
fail_under = 80
precision = 2
show_missing = true
skip_covered = false

# Mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Pyright configuration
[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

# Python Semantic Release - per-package versioning with Git tags
# Each package has its own semantic version tracked via Git tags
# See: https://python-semantic-release.readthedocs.io/
#
# Commit message format (Conventional Commits):
#   feat(package-scope): description   -> Minor bump
#   fix(package-scope): description   -> Patch bump  
#   feat!: description                -> Major bump (breaking)
#
# Examples:
#   feat(edt): add new file operations       -> extended-data-types minor bump
#   fix(logging): handle edge case           -> lifecyclelogging patch bump
#   feat(connectors): add new vendor         -> vendor-connectors minor bump
#
# Per-package configuration is in packages/*/pyproject.toml
