[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Note: Packages have been migrated to individual repositories.
# This file remains for any shared tooling configuration.
# See README.md for package repository locations.

[project]
name = "jbcom-oss-ecosystem"
version = "0.0.0"
description = "OSS Ecosystem hub - packages migrated to individual repos"
authors = [
    { name = "Jon Bogaty", email = "jon@jonbogaty.com" }
]
maintainers = [
    { name = "Jon Bogaty", email = "jon@jonbogaty.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Private :: Do Not Upload",
]

[project.urls]
Homepage = "https://github.com/jbcom/jbcom-oss-ecosystem"
Repository = "https://github.com/jbcom/jbcom-oss-ecosystem"

# Ruff configuration (shared standards)
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# Migration note: For package-specific configuration, see individual repos:
# - https://github.com/jbcom/extended-data-types
# - https://github.com/jbcom/lifecyclelogging
# - https://github.com/jbcom/directed-inputs-class
# - https://github.com/jbcom/python-terraform-bridge
# - https://github.com/jbcom/vendor-connectors
# - https://github.com/jbcom/agentic-control
# - https://github.com/jbcom/strata
# - https://github.com/jbcom/otterfall
# - https://github.com/jbcom/vault-secret-sync
