[project]
name = "crew-agents"
version = "0.2.0"
description = "CrewAI agents for game development - specialized crews for world design, creature design, gameplay, ECS implementation, rendering, and asset generation (INTERNAL - not distributed)"
requires-python = ">=3.11"
dependencies = [
    "crewai[tools,anthropic]>=1.5.0",
    "pyyaml>=6.0.3",
    "pydantic>=2.12.4",
    "mesh-toolkit>=0.1.0",
]

[project.optional-dependencies]
tests = [
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "pytest-cov>=5.0.0",
]

[project.scripts]
crew_agents = "crew_agents.main:main"
# Legacy entry points (deprecated)
run_crew = "crew_agents.crew:run"
train_crew = "crew_agents.crew:train"
replay_crew = "crew_agents.crew:replay"
test_crew = "crew_agents.crew:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crew_agents"]

[tool.uv.sources]
mesh-toolkit = { workspace = true }

[dependency-groups]
dev = ["ruff>=0.14.6"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4"]
# Ignore docstring style rules and print statements for this package
ignore = [
    "D",    # all pydocstyle rules
    "T201", # print statements (needed for CLI output)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
